[metadata]
name = cloud-utils
version = 0.0.1
description = Tools for multi cloud deployments.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
	async-cache
	azure-storage-blob==2.1.0
	boto3
	# Required by PyMongo but not installed by it.
	dnspython
	google-cloud-storage
	pymongo<4
	xmltodict
	gamla>=152
	kubernetes
	motor
	cachetools
	redis
	fakeredis
	datadog_api_client
python_requires = >=3.11

[options.entry_points]
console_scripts =
    deploy-cron-jobs = cloud_utils.scheduler.deploy_cron_jobs:main
    run-jobs = cloud_utils.scheduler.run_jobs:main
